osa5/bloglist-frontend/src/index.css
.success {
  padding: 0.25rem 0.5rem;
  border: solid green 4px;
  border-radius: 5px;
  background-color: lime;
}

.error {
  padding: 0.25rem 0.5rem;
  border: solid darkred 4px;
  border-radius: 5px;
  background-color: red;
}

.no-wrap {
  text-wrap: nowrap;
}

.horizontal {
  display: flex;
  > * {
    min-width: max-content;
  }
}

